force-app/main/default/objects/IPM_Test_Measure_Set__mdt/IPM_Test_Measure_Set__mdt.object-meta.xml
<CustomObject>
    <description>Used to hold reference information for Tests and Measures which will be used in a Flow</description>
    <label>Test Measure Set</label>
    <pluralLabel>Test Measure Sets</pluralLabel>
</CustomObject>