force-app/main/default/objects/IPM_Test_Measure_Set__mdt/fields/IPM_Active__c.field-meta.xml
<CustomField>
    <fullName>IPM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>