force-app/main/default/objects/IPM_Test_Measure_Set__mdt/fields/IPM_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>IPM_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPM_Commercial_Self_Insurer</fullName>
                <default>true</default>
                <label>Commercial Self Insurer</label>
            </value>
            <value>
                <fullName>IPM_Local_Government_Council</fullName>
                <label>Local Government/Council</label>
            </value>
            <value>
                <fullName>IPM_State_Government</fullName>
                <label>State Government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>