force-app/main/default/objects/IPM_Test_Measure_Set__mdt/fields/IPM_Measure_Name__c.field-meta.xml
<CustomField>
    <fullName>IPM_Measure_Name__c</fullName>
    <label>Measure Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>