force-app/main/default/objects/IPM_Test_Measure_Set__mdt/fields/IPM_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>IPM_Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPM_Financial</fullName>
                <default>true</default>
                <label>Financial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>